package com.rewear.rewear.entity;

public class Reservation {

}
